Configuraciones con otras densidades para ambos protocolos

--- a/src/networks/Xintersection_stgo/omnetpp.ini
+++ b/src/networks/Xintersection_stgo/omnetpp.ini
@@ -1,4 +1,4 @@
-[General]
+ [General]
 cmdenv-express-mode = true
 cmdenv-autoflush = true
 cmdenv-status-frequency = 1s
@@ -278,18 +278,18 @@ repeat = 20
 *.node[*].appl.dataOnSch = true
 *.rsu[*].appl.dataOnSch = true
 
-[Config WithChSw-slotted-WSM_Ns5_p1]
+[Config WithChSw-slotted-WSM_Ns3_p2]
 **.vector-recording = false
 
 *.node[*].appl.Slotted1Enabled = true
-*.node[*].appl.Slotted_Ns = 5
+*.node[*].appl.Slotted_Ns = 3
 *.node[*].appl.Slotted_R = 300 #40
 *.node[*].appl.Slotted_tau = 0.005 #1.45
 
-*.node[*].appl.beaconInterval = 10s #0.5s #${0.1s,0.5s}
+*.node[*].appl.beaconInterval = ${0.1s,0.5s}
 #*.node[*].appl.beaconAtTime = 5s
 
-*.manager.firstStepAt = 80s
+*.manager.firstStepAt = 110s
 *.manager.roiRects = "1213.4,524.2-1413.4,724.2" #"1217,481-1427,794" #x,y-X,Y "1217.11,1217.11-481.6,481.6 1417,1417-681.6,681.6"
 
 
@@ -300,27 +300,61 @@ repeat = 20
 *.node[*].appl.sendWSA = false #${false,true}
 
 *.node[*].veinsmobility.accidentCount = 1
-*.node[17].veinsmobility.accidentStart = 85s
-*.node[17].veinsmobility.accidentDuration = 5s
-*.node[17].appl.Accident_start = 85
-*.node[17].appl.MeInAcc = true
+*.node[46].veinsmobility.accidentStart = 115s
+*.node[46].veinsmobility.accidentDuration = 5s
+*.node[46].appl.Accident_start = 115
+*.node[46].appl.MeInAcc = true
 
-sim-time-limit = 90s
+sim-time-limit = 120s
 
-#repeat = 20
+repeat = 20
 
-[Config WithChSw-slotted-WSM_p2]
+[Config WithChSw-TrAD-WSM-p2]
+
+**.vector-recording = false
+
+*.node[*].appl.TrAD = true
+*.node[*].appl.TrAD_ti = 0.005
+
+*.node[*].appl.TrAD_alpha = 10 
+*.node[*].appl.TrAD_Neig = 25
+*.node[*].appl.TrAD_R = 366 
+
+*.node[*].appl.beaconInterval = ${0.1s,0.5s}
+#*.node[*].appl.beaconAtTime = 5s
+
+*.manager.firstStepAt = 110s
+*.manager.roiRects = "1213.4,524.2-1413.4,724.2"
+
+*.**.nic.mac1609_4.useServiceChannel = true
+*.node[*].appl.dataOnSch = true
+
+*.node[*].appl.Send_Per_WSM= false
+*.node[*].appl.sendWSA = ${false,true}
+
+
+
+*.node[46].veinsmobility.accidentCount = 1
+*.node[46].veinsmobility.accidentStart = 115s
+*.node[46].veinsmobility.accidentDuration = 5s
+*.node[46].appl.Accident_start = 115
+
+sim-time-limit = 120s
+
+repeat = 20
+
+[Config WithChSw-slotted-WSM_p3]
 **.vector-recording = false
 
 *.node[*].appl.Slotted1Enabled = true
-*.node[*].appl.Slotted_Ns = 5
+*.node[*].appl.Slotted_Ns = ${3 ,2} 
 *.node[*].appl.Slotted_R = 300 #40
 *.node[*].appl.Slotted_tau = 0.005 #1.45
 
-*.node[*].appl.beaconInterval = 0.5s #${0.1s,0.5s}
+*.node[*].appl.beaconInterval = ${0.1s,0.5s}
 #*.node[*].appl.beaconAtTime = 5s
 
-*.manager.firstStepAt = 80s
+*.manager.firstStepAt = 90s
 *.manager.roiRects = "1213.4,524.2-1413.4,724.2" #"1217,481-1427,794" #x,y-X,Y "1217.11,1217.11-481.6,481.6 1417,1417-681.6,681.6"
 
 
@@ -331,9 +365,45 @@ sim-time-limit = 90s
 *.node[*].appl.sendWSA = false #${false,true}
 
 *.node[*].veinsmobility.accidentCount = 1
-*.node[17].veinsmobility.accidentStart = 85s
-*.node[17].veinsmobility.accidentDuration = 5s
-*.node[17].appl.Accident_start = 85
-*.node[17].appl.MeInAcc = true
+*.node[10].veinsmobility.accidentStart = 95s
+*.node[10].veinsmobility.accidentDuration = 5s
+*.node[10].appl.Accident_start = 95
+*.node[10].appl.MeInAcc = true
 
-sim-time-limit = 90s
+sim-time-limit = 100s
+
+repeat = 20
+
+[Config WithChSw-TrAD-WSM-p3]
+
+**.vector-recording = false
+
+*.node[*].appl.TrAD = true
+*.node[*].appl.TrAD_ti = 0.005
+
+*.node[*].appl.TrAD_alpha = 10 
+*.node[*].appl.TrAD_Neig = 25
+*.node[*].appl.TrAD_R = 366 
+
+*.node[*].appl.beaconInterval = ${0.1s,0.5s}
+#*.node[*].appl.beaconAtTime = 5s
+
+*.manager.firstStepAt = 90s
+*.manager.roiRects = "1213.4,524.2-1413.4,724.2"
+
+*.**.nic.mac1609_4.useServiceChannel = true
+*.node[*].appl.dataOnSch = true
+
+*.node[*].appl.Send_Per_WSM= false
+*.node[*].appl.sendWSA = ${false,true}
+
+
+
+*.node[10].veinsmobility.accidentCount = 1
+*.node[10].veinsmobility.accidentStart = 95s
+*.node[10].veinsmobility.accidentDuration = 5s
+*.node[10].appl.Accident_start = 95
+
+sim-time-limit = 100s
+
+repeat = 20
