Mean Std from sca

--- a/src/networks/Xintersection_stgo/omnetpp.ini
+++ b/src/networks/Xintersection_stgo/omnetpp.ini
@@ -265,6 +265,7 @@ repeat = 20
 *.node[63].veinsmobility.accidentStart = 305s
 *.node[63].veinsmobility.accidentDuration = 5s
 *.node[63].appl.Accident_start = 305
+*.node[63].appl.MeInAcc = true
 
 
 
@@ -297,7 +298,7 @@ repeat = 20
 *.node[*].appl.dataOnSch = true
 
 *.node[*].appl.Send_Per_WSM = false
-*.node[*].appl.sendWSA = false #${false,true}
+*.node[*].appl.sendWSA = ${false,true}
 
 *.node[*].veinsmobility.accidentCount = 1
 *.node[46].veinsmobility.accidentStart = 115s
@@ -338,6 +339,8 @@ repeat = 20
 *.node[46].veinsmobility.accidentStart = 115s
 *.node[46].veinsmobility.accidentDuration = 5s
 *.node[46].appl.Accident_start = 115
+*.node[46].appl.MeInAcc = true
+
 
 sim-time-limit = 120s
 
@@ -362,7 +365,7 @@ repeat = 20
 *.node[*].appl.dataOnSch = true
 
 *.node[*].appl.Send_Per_WSM = false
-*.node[*].appl.sendWSA = false #${false,true}
+*.node[*].appl.sendWSA = ${false,true}
 
 *.node[*].veinsmobility.accidentCount = 1
 *.node[10].veinsmobility.accidentStart = 95s
@@ -403,6 +406,7 @@ repeat = 20
 *.node[10].veinsmobility.accidentStart = 95s
 *.node[10].veinsmobility.accidentDuration = 5s
 *.node[10].appl.Accident_start = 95
+*.node[10].appl.MeInAcc = true
 
 sim-time-limit = 100s
 
