--- a/src/networks/Xintersection_stgo/omnetpp.ini
+++ b/src/networks/Xintersection_stgo/omnetpp.ini
@@ -119,7 +119,7 @@ sim-time-limit = 1000s
 
 *.node[*].appl.Slotted1Enabled = true
 *.node[*].appl.Slotted_Ns = 3
-*.node[*].appl.Slotted_R = 500 #40
+*.node[*].appl.Slotted_R = 366 #500 #40 !!debe ser el mismo que *.node[*].appl.TrAD_R = 366 considerando la potencia *.**.nic.mac1609_4.txPower = 20mW estudiando las referencia de Pablo
 *.node[*].appl.Slotted_tau = 0.005 #0.32 #1.45
 *.node[*].appl.beaconInterval = ${0.1s,0.5s}
 
@@ -138,7 +138,7 @@ sim-time-limit = 1000s
 
 *.node[*].appl.Slotted1Enabled = true
 *.node[*].appl.Slotted_Ns = 7 #5
-*.node[*].appl.Slotted_R = 500 #40
+*.node[*].appl.Slotted_R = 366 #500 #40 !!debe ser el mismo que *.node[*].appl.TrAD_R = 366 considerando la potencia *.**.nic.mac1609_4.txPower = 20mW estudiando las referencia de Pablo
 *.node[*].appl.Slotted_tau = 0.005#1.45
 *.node[*].appl.beaconInterval = 0.1s #${0.1s,0.5s}
 
@@ -178,7 +178,7 @@ sim-time-limit = 1000s
 
 *.node[*].appl.Slotted1Enabled = true
 *.node[*].appl.Slotted_Ns = 5
-*.node[*].appl.Slotted_R = 300 #40
+*.node[*].appl.Slotted_R = 366 #500 #40 !!debe ser el mismo que *.node[*].appl.TrAD_R = 366 considerando la potencia *.**.nic.mac1609_4.txPower = 20mW estudiando las referencia de Pablo
 *.node[*].appl.Slotted_tau = 0.005 #1.45
 
 *.node[*].appl.beaconInterval = ${0.1s,0.5s}
@@ -209,7 +209,7 @@ repeat = 20
 
 *.node[*].appl.Slotted1Enabled = true
 *.node[*].appl.Slotted_Ns = 5
-*.node[*].appl.Slotted_R = 300 #40
+*.node[*].appl.Slotted_R = 366 #500 #40 !!debe ser el mismo que *.node[*].appl.TrAD_R = 366 considerando la potencia *.**.nic.mac1609_4.txPower = 20mW estudiando las referencia de Pablo
 *.node[*].appl.Slotted_tau = 0.005 #1.45
 
 *.node[*].appl.beaconInterval = ${0.1s,0.5s}
