modificando Potencia Tx radio de transimición, exponente del pathloss referente a TrAD

--- a/src/networks/Xintersection_stgo/omnetpp.ini
+++ b/src/networks/Xintersection_stgo/omnetpp.ini
@@ -80,9 +80,9 @@ sim-time-limit = 1000s
 
 *.**.nic.mac1609_4.useServiceChannel = false
 
-*.**.nic.mac1609_4.txPower = 20mW
+*.**.nic.mac1609_4.txPower = 300 mW #20mW, en base a TrAD
 *.**.nic.mac1609_4.bitrate = 6Mbps
-*.**.nic.phy80211p.sensitivity = -89dBm
+*.**.nic.phy80211p.sensitivity = -110 dBm#-89dBm, en base a TrAD
 
 *.**.nic.phy80211p.useThermalNoise = true
 *.**.nic.phy80211p.thermalNoise = -110dBm
@@ -130,7 +130,7 @@ sim-time-limit = 1000s
 *.node[*].appl.TrAD_ti = 0.005
 *.node[*].appl.TrAD_alpha = 10 
 *.node[*].appl.TrAD_Neig = 25
-*.node[*].appl.TrAD_R = 366 
+*.node[*].appl.TrAD_R = 366 # en base a TrAD
 *.node[*].appl.beaconInterval = 0.1s # ${0.1s,0.5s}
 sim-time-limit = 1000s
 
