--- a/src/networks/Xintersection_stgo/omnetpp.ini
+++ b/src/networks/Xintersection_stgo/omnetpp.ini
@@ -102,6 +102,9 @@ sim-time-limit = 1000s
 *.node[*].appl.sendBeacons = true
 *.node[*].appl.dataOnSch = false
 *.node[*].appl.beaconInterval = 1s
+*.node[*].appl.beaconUserPriority = 5
+*.node[*].appl.dataUserPriority = 7
+
 
 ##########################################################
 #                      Mobility                          #
@@ -181,7 +184,7 @@ sim-time-limit = 1000s
 *.node[*].appl.Slotted_R = 366 #500 #40 !!debe ser el mismo que *.node[*].appl.TrAD_R = 366 considerando la potencia *.**.nic.mac1609_4.txPower = 20mW estudiando las referencia de Pablo
 *.node[*].appl.Slotted_tau = 0.005 #1.45
 
-*.node[*].appl.beaconInterval = ${0.1s,0.5s}
+*.node[*].appl.beaconInterval = 0.5s #${0.1s,0.5s}
 #*.node[*].appl.beaconAtTime = 5s
 
 *.manager.firstStepAt = 300s
@@ -192,17 +195,17 @@ sim-time-limit = 1000s
 *.node[*].appl.dataOnSch = true
 
 *.node[*].appl.Send_Per_WSM = false
-*.node[*].appl.sendWSA = ${false,true}
+*.node[*].appl.sendWSA = false#${false,true}
 
 *.node[*].veinsmobility.accidentCount = 1
-*.node[63].veinsmobility.accidentStart = 305s
+*.node[63].veinsmobility.accidentStart = 301s
 *.node[63].veinsmobility.accidentDuration = 5s
-*.node[63].appl.Accident_start = 305
+*.node[63].appl.Accident_start = 301
 *.node[63].appl.MeInAcc = true
 
 sim-time-limit = 310s
 
-repeat = 20
+#repeat = 20
 
 [Config WithChSw-slotted-WSM_Ns7]
 **.vector-recording = false
@@ -347,14 +350,14 @@ sim-time-limit = 120s
 repeat = 20
 
 [Config WithChSw-slotted-WSM_p3]
-**.vector-recording = false
+**.vector-recording = true #false
 
 *.node[*].appl.Slotted1Enabled = true
-*.node[*].appl.Slotted_Ns = ${3 ,2} 
+*.node[*].appl.Slotted_Ns = 3 #${3 ,2} 
 *.node[*].appl.Slotted_R = 300 #40
 *.node[*].appl.Slotted_tau = 0.005 #1.45
 
-*.node[*].appl.beaconInterval = ${0.1s,0.5s}
+*.node[*].appl.beaconInterval = 0.5s #${0.1s,0.5s}
 #*.node[*].appl.beaconAtTime = 5s
 
 *.manager.firstStepAt = 90s
@@ -365,17 +368,17 @@ repeat = 20
 *.node[*].appl.dataOnSch = true
 
 *.node[*].appl.Send_Per_WSM = false
-*.node[*].appl.sendWSA = ${false,true}
+*.node[*].appl.sendWSA = false#${false,true}
 
 *.node[*].veinsmobility.accidentCount = 1
-*.node[10].veinsmobility.accidentStart = 95s
+*.node[10].veinsmobility.accidentStart = 91s
 *.node[10].veinsmobility.accidentDuration = 5s
-*.node[10].appl.Accident_start = 95
+*.node[10].appl.Accident_start = 91
 *.node[10].appl.MeInAcc = true
 
 sim-time-limit = 100s
 
-repeat = 20
+#repeat = 20
 
 [Config WithChSw-TrAD-WSM-p3]
 
@@ -403,11 +406,11 @@ repeat = 20
 
 
 *.node[10].veinsmobility.accidentCount = 1
-*.node[10].veinsmobility.accidentStart = 95s
+*.node[10].veinsmobility.accidentStart = 91s
 *.node[10].veinsmobility.accidentDuration = 5s
-*.node[10].appl.Accident_start = 95
+*.node[10].appl.Accident_start = 91
 *.node[10].appl.MeInAcc = true
 
 sim-time-limit = 100s
 
-repeat = 20
+#repeat = 20
