implementado algoritmo de sender

--- a/src/networks/Xintersection_stgo/omnetpp.ini
+++ b/src/networks/Xintersection_stgo/omnetpp.ini
@@ -95,6 +95,28 @@ sim-time-limit = 1000s
 *.**.nic.phy80211p.antenna = xmldoc("antenna.xml", "/root/Antenna[@id='monopole']")
 
 ##########################################################
+#            11p specific parameters                     #
+#                                                        #
+#                    NIC2-Settings For Busy Tone         #
+##########################################################
+
+*.**.nic2.mac1609_4.useServiceChannel = false
+
+*.**.nic2.mac1609_4.txPower = 300 mW #20mW, en base a TrAD
+*.**.nic2.mac1609_4.bitrate = 6Mbps
+*.**.nic2.phy80211p.sensitivity = -110 dBm#-89dBm, en base a TrAD
+
+*.**.nic2.phy80211p.useThermalNoise = true
+*.**.nic2.phy80211p.thermalNoise = -110dBm
+
+*.**.nic2.phy80211p.decider = xmldoc("config.xml")
+*.**.nic2.phy80211p.analogueModels = xmldoc("config.xml")
+*.**.nic2.phy80211p.usePropagationDelay = true
+*.**.nic2.phy80211p.collectCollisionStatistics = true
+
+*.**.nic2.phy80211p.antenna = xmldoc("antenna.xml", "/root/Antenna[@id='monopole']")
+
+##########################################################
 #                    WaveAppLayer                        #
 ##########################################################
 *.node[*].applType = "myWaveAppLayer"
