Modificando Archivos para utilizar dual radio

--- a/src/networks/Xintersection_stgo/omnetpp.ini
+++ b/src/networks/Xintersection_stgo/omnetpp.ini
@@ -78,43 +78,23 @@ sim-time-limit = 1000s
 *.connectionManager.maxInterfDist = 2600m
 *.connectionManager.drawMaxIntfDist = false
 
-*.**.nic.mac1609_4.useServiceChannel = false
+*.**.nic[*].mac1609_4.useServiceChannel = false
 
-*.**.nic.mac1609_4.txPower = 300 mW #20mW, en base a TrAD
-*.**.nic.mac1609_4.bitrate = 6Mbps
-*.**.nic.phy80211p.sensitivity = -110 dBm#-89dBm, en base a TrAD
+*.**.nic[*].mac1609_4.txPower = 300 mW #20mW, en base a TrAD
+*.**.nic[*].mac1609_4.bitrate = 6Mbps
+*.**.nic[*].phy80211p.sensitivity = -110 dBm#-89dBm, en base a TrAD
 
-*.**.nic.phy80211p.useThermalNoise = true
-*.**.nic.phy80211p.thermalNoise = -110dBm
+*.**.nic[*].phy80211p.useThermalNoise = true
+*.**.nic[*].phy80211p.thermalNoise = -110dBm
 
-*.**.nic.phy80211p.decider = xmldoc("config.xml")
-*.**.nic.phy80211p.analogueModels = xmldoc("config.xml")
-*.**.nic.phy80211p.usePropagationDelay = true
-*.**.nic.phy80211p.collectCollisionStatistics = true
+*.**.nic[*].phy80211p.decider = xmldoc("config.xml")
+*.**.nic[*].phy80211p.analogueModels = xmldoc("config.xml")
+*.**.nic[*].phy80211p.usePropagationDelay = true
+*.**.nic[*].phy80211p.collectCollisionStatistics = true
 
-*.**.nic.phy80211p.antenna = xmldoc("antenna.xml", "/root/Antenna[@id='monopole']")
+*.**.nic[*].phy80211p.antenna = xmldoc("antenna.xml", "/root/Antenna[@id='monopole']")
 
-##########################################################
-#            11p specific parameters                     #
-#                                                        #
-#                    NIC2-Settings For Busy Tone         #
-##########################################################
 
-*.**.nic2.mac1609_4.useServiceChannel = false
-
-*.**.nic2.mac1609_4.txPower = 300 mW #20mW, en base a TrAD
-*.**.nic2.mac1609_4.bitrate = 6Mbps
-*.**.nic2.phy80211p.sensitivity = -110 dBm#-89dBm, en base a TrAD
-
-*.**.nic2.phy80211p.useThermalNoise = true
-*.**.nic2.phy80211p.thermalNoise = -110dBm
-
-*.**.nic2.phy80211p.decider = xmldoc("config.xml")
-*.**.nic2.phy80211p.analogueModels = xmldoc("config.xml")
-*.**.nic2.phy80211p.usePropagationDelay = true
-*.**.nic2.phy80211p.collectCollisionStatistics = true
-
-*.**.nic2.phy80211p.antenna = xmldoc("antenna.xml", "/root/Antenna[@id='monopole']")
 
 ##########################################################
 #                    WaveAppLayer                        #
@@ -213,7 +193,7 @@ sim-time-limit = 1000s
 *.manager.roiRects = "1213.4,524.2-1413.4,724.2" #"1217,481-1427,794" #x,y-X,Y "1217.11,1217.11-481.6,481.6 1417,1417-681.6,681.6"
 
 
-*.**.nic.mac1609_4.useServiceChannel = true
+*.**.nic[*].mac1609_4.useServiceChannel = true
 *.node[*].appl.dataOnSch = true
 
 *.node[*].appl.Send_Per_WSM = false
@@ -244,7 +224,7 @@ sim-time-limit = 310s
 *.manager.roiRects = "1213.4,524.2-1413.4,724.2" #"1217,481-1427,794" #x,y-X,Y "1217.11,1217.11-481.6,481.6 1417,1417-681.6,681.6"
 
 
-*.**.nic.mac1609_4.useServiceChannel = true
+*.**.nic[*].mac1609_4.useServiceChannel = true
 *.node[*].appl.dataOnSch = true
 
 *.node[*].appl.Send_Per_WSM = ${false,true}
