--- a/src/networks/Xintersection_stgo/omnetpp.ini
+++ b/src/networks/Xintersection_stgo/omnetpp.ini
@@ -74,26 +74,60 @@ sim-time-limit = 1000s
 #                                                        #
 #                    NIC-Settings                        #
 ##########################################################
+
 *.connectionManager.sendDirect = true
 *.connectionManager.maxInterfDist = 2600m
 *.connectionManager.drawMaxIntfDist = false
 
-*.**.nic[*].mac1609_4.useServiceChannel = false
+*.**.nic.mac1609_4.useServiceChannel = false
 
-*.**.nic[*].mac1609_4.txPower = 300 mW #20mW, en base a TrAD
-*.**.nic[*].mac1609_4.bitrate = 6Mbps
-*.**.nic[*].phy80211p.sensitivity = -110 dBm#-89dBm, en base a TrAD
+*.**.nic.mac1609_4.txPower = 300 mW #20mW, en base a TrAD
+*.**.nic.mac1609_4.bitrate = 6Mbps
+*.**.nic.phy80211p.sensitivity = -110 dBm#-89dBm, en base a TrAD
 
-*.**.nic[*].phy80211p.useThermalNoise = true
-*.**.nic[*].phy80211p.thermalNoise = -110dBm
+*.**.nic.phy80211p.useThermalNoise = true
+*.**.nic.phy80211p.thermalNoise = -110dBm
 
-*.**.nic[*].phy80211p.decider = xmldoc("config.xml")
-*.**.nic[*].phy80211p.analogueModels = xmldoc("config.xml")
-*.**.nic[*].phy80211p.usePropagationDelay = true
-*.**.nic[*].phy80211p.collectCollisionStatistics = true
+*.**.nic.phy80211p.decider = xmldoc("config.xml")
+*.**.nic.phy80211p.analogueModels = xmldoc("config.xml")
+*.**.nic.phy80211p.usePropagationDelay = true
+*.**.nic.phy80211p.collectCollisionStatistics = true
 
-*.**.nic[*].phy80211p.antenna = xmldoc("antenna.xml", "/root/Antenna[@id='monopole']")
+*.**.nic.phy80211p.antenna = xmldoc("antenna.xml", "/root/Antenna[@id='monopole']")
 
+*.**.nic[1].mac1609_4.useServiceChannel = false
+
+*.**.nic[1].mac1609_4.txPower = 300 mW #20mW, en base a TrAD
+*.**.nic[1].mac1609_4.bitrate = 6Mbps
+*.**.nic[1].phy80211p.sensitivity = -110 dBm#-89dBm, en base a TrAD
+
+*.**.nic[1].phy80211p.useThermalNoise = true
+*.**.nic[1].phy80211p.thermalNoise = -110dBm
+
+*.**.nic[1].phy80211p.decider = xmldoc("config2.xml")
+*.**.nic[1].phy80211p.analogueModels = xmldoc("config2.xml")
+*.**.nic[1].phy80211p.usePropagationDelay = true
+*.**.nic[1].phy80211p.collectCollisionStatistics = true
+
+*.**.nic[1].phy80211p.antenna = xmldoc("antenna.xml", "/root/Antenna[@id='monopole']")
+
+# For DSP implementation
+
+*.**.nic.DSP.mac1609_4_2.useServiceChannel = false
+
+*.**.nic.DSP.mac1609_4_2.txPower = 300 mW #20mW, en base a TrAD
+*.**.nic.DSP.mac1609_4_2.bitrate = 6Mbps
+*.**.nic.DSP.phy80211p2.sensitivity = -110 dBm#-89dBm, en base a TrAD
+
+*.**.nic.DSP.phy80211p2.useThermalNoise = true
+*.**.nic.DSP.phy80211p2.thermalNoise = -110dBm
+
+*.**.nic.DSP.phy80211p2.decider = xmldoc("config2.xml")
+*.**.nic.DSP.phy80211p2.analogueModels = xmldoc("config2.xml")
+*.**.nic.DSP.phy80211p2.usePropagationDelay = true
+*.**.nic.DSP.phy80211p2.collectCollisionStatistics = true
+
+*.**.nic.DSP.phy80211p2.antenna = xmldoc("antenna.xml", "/root/Antenna[@id='monopole']")
 
 
 ##########################################################
@@ -381,6 +415,26 @@ repeat = 20
 sim-time-limit = 100s
 
 #repeat = 20
+
+#*.connectionManager.sendDirect = true
+#*.connectionManager.maxInterfDist = 2600m
+#*.connectionManager.drawMaxIntfDist = false
+#
+#*.**.nic[*].mac1609_4.useServiceChannel = false
+#
+#*.**.nic[*].mac1609_4.txPower = 300 mW #20mW, en base a TrAD
+#*.**.nic[*].mac1609_4.bitrate = 6Mbps
+#*.**.nic[*].phy80211p.sensitivity = -110 dBm#-89dBm, en base a TrAD
+#
+#*.**.nic[*].phy80211p.useThermalNoise = true
+#*.**.nic[*].phy80211p.thermalNoise = -110dBm
+#
+#*.**.nic[*].phy80211p.decider = xmldoc("config.xml")
+#*.**.nic[*].phy80211p.analogueModels = xmldoc("config.xml")
+#*.**.nic[*].phy80211p.usePropagationDelay = true
+#*.**.nic[*].phy80211p.collectCollisionStatistics = true
+#
+#*.**.nic[*].phy80211p.antenna = xmldoc("antenna.xml", "/root/Antenna[@id='monopole']")
 
 [Config WithChSw-TrAD-WSM-p3]
 
