Repositorio con error luegode modificar gates a vectores

--- a/src/networks/Xintersection_stgo/omnetpp.ini
+++ b/src/networks/Xintersection_stgo/omnetpp.ini
@@ -79,37 +79,37 @@ sim-time-limit = 1000s
 *.connectionManager.maxInterfDist = 2600m
 *.connectionManager.drawMaxIntfDist = false
 
-*.**.nic.mac1609_4.useServiceChannel = false
+*.**.nic2.mac1609_4_2.useServiceChannel = false
 
-*.**.nic.mac1609_4.txPower = 300 mW #20mW, en base a TrAD
-*.**.nic.mac1609_4.bitrate = 6Mbps
-*.**.nic.phy80211p.sensitivity = -110 dBm#-89dBm, en base a TrAD
+*.**.nic2.mac1609_4_2.txPower = 300 mW #20mW, en base a TrAD
+*.**.nic2.mac1609_4_2.bitrate = 6Mbps
+*.**.nic2.phy80211p2.sensitivity = -110 dBm#-89dBm, en base a TrAD
 
-*.**.nic.phy80211p.useThermalNoise = true
-*.**.nic.phy80211p.thermalNoise = -110dBm
+*.**.nic2.phy80211p2.useThermalNoise = true
+*.**.nic2.phy80211p2.thermalNoise = -110dBm
 
-*.**.nic.phy80211p.decider = xmldoc("config.xml")
-*.**.nic.phy80211p.analogueModels = xmldoc("config.xml")
-*.**.nic.phy80211p.usePropagationDelay = true
-*.**.nic.phy80211p.collectCollisionStatistics = true
+*.**.nic2.phy80211p2.decider = xmldoc("config.xml")
+*.**.nic2.phy80211p2.analogueModels = xmldoc("config.xml")
+*.**.nic2.phy80211p2.usePropagationDelay = true
+*.**.nic2.phy80211p2.collectCollisionStatistics = true
 
-*.**.nic.phy80211p.antenna = xmldoc("antenna.xml", "/root/Antenna[@id='monopole']")
+*.**.nic2.phy80211p2.antenna = xmldoc("antenna.xml", "/root/Antenna[@id='monopole']")
 
-*.**.nic[1].mac1609_4.useServiceChannel = false
+*.**.nic[*].mac1609_4.useServiceChannel = false
 
-*.**.nic[1].mac1609_4.txPower = 300 mW #20mW, en base a TrAD
-*.**.nic[1].mac1609_4.bitrate = 6Mbps
-*.**.nic[1].phy80211p.sensitivity = -110 dBm#-89dBm, en base a TrAD
+*.**.nic[*].mac1609_4.txPower = 300 mW #20mW, en base a TrAD
+*.**.nic[*].mac1609_4.bitrate = 6Mbps
+*.**.nic[*].phy80211p.sensitivity = -110 dBm#-89dBm, en base a TrAD
 
-*.**.nic[1].phy80211p.useThermalNoise = true
-*.**.nic[1].phy80211p.thermalNoise = -110dBm
+*.**.nic[*].phy80211p.useThermalNoise = true
+*.**.nic[*].phy80211p.thermalNoise = -110dBm
 
-*.**.nic[1].phy80211p.decider = xmldoc("config2.xml")
-*.**.nic[1].phy80211p.analogueModels = xmldoc("config2.xml")
-*.**.nic[1].phy80211p.usePropagationDelay = true
-*.**.nic[1].phy80211p.collectCollisionStatistics = true
+*.**.nic[*].phy80211p.decider = xmldoc("config2.xml")
+*.**.nic[*].phy80211p.analogueModels = xmldoc("config2.xml")
+*.**.nic[*].phy80211p.usePropagationDelay = true
+*.**.nic[*].phy80211p.collectCollisionStatistics = true
 
-*.**.nic[1].phy80211p.antenna = xmldoc("antenna.xml", "/root/Antenna[@id='monopole']")
+*.**.nic[*].phy80211p.antenna = xmldoc("antenna.xml", "/root/Antenna[@id='monopole']")
 
 # For DSP implementation
 
