error vtable phylayer

--- a/src/networks/Xintersection_stgo/omnetpp.ini
+++ b/src/networks/Xintersection_stgo/omnetpp.ini
@@ -454,7 +454,7 @@ sim-time-limit = 100s
 *.manager.roiRects = "1213.4,524.2-1413.4,724.2"
 
 *.**.nic.mac1609_4.useServiceChannel = true
-*.node[*].appl.dataOnSch = true
+*.node[*].appl.dataOnSch = false
 
 *.node[*].appl.Send_Per_WSM= false
 *.node[*].appl.sendWSA = ${false,true}
