Error de gate en capa física estudiar interacción con la capa mac

--- a/src/networks/Xintersection_stgo/omnetpp.ini
+++ b/src/networks/Xintersection_stgo/omnetpp.ini
@@ -47,6 +47,7 @@ sim-time-limit = 1000s
 *.manager.port = 9999
 *.manager.autoShutdown = true
 *.manager.launchConfig = xmldoc("stgo1.launchd.xml")
+*.manager.moduleType = "ca_system.nodes.Car"
 #*.manager.roiRects = "20,20-30,30 20,20-30,30"
 
 # Número de Vehiculos
@@ -79,22 +80,6 @@ sim-time-limit = 1000s
 *.connectionManager.maxInterfDist = 2600m
 *.connectionManager.drawMaxIntfDist = false
 
-*.**.nic2.mac1609_4_2.useServiceChannel = false
-
-*.**.nic2.mac1609_4_2.txPower = 300 mW #20mW, en base a TrAD
-*.**.nic2.mac1609_4_2.bitrate = 6Mbps
-*.**.nic2.phy80211p2.sensitivity = -110 dBm#-89dBm, en base a TrAD
-
-*.**.nic2.phy80211p2.useThermalNoise = true
-*.**.nic2.phy80211p2.thermalNoise = -110dBm
-
-*.**.nic2.phy80211p2.decider = xmldoc("config.xml")
-*.**.nic2.phy80211p2.analogueModels = xmldoc("config.xml")
-*.**.nic2.phy80211p2.usePropagationDelay = true
-*.**.nic2.phy80211p2.collectCollisionStatistics = true
-
-*.**.nic2.phy80211p2.antenna = xmldoc("antenna.xml", "/root/Antenna[@id='monopole']")
-
 *.**.nic[*].mac1609_4.useServiceChannel = false
 
 *.**.nic[*].mac1609_4.txPower = 300 mW #20mW, en base a TrAD
@@ -110,24 +95,6 @@ sim-time-limit = 1000s
 *.**.nic[*].phy80211p.collectCollisionStatistics = true
 
 *.**.nic[*].phy80211p.antenna = xmldoc("antenna.xml", "/root/Antenna[@id='monopole']")
-
-# For DSP implementation
-
-*.**.nic.DSP.mac1609_4_2.useServiceChannel = false
-
-*.**.nic.DSP.mac1609_4_2.txPower = 300 mW #20mW, en base a TrAD
-*.**.nic.DSP.mac1609_4_2.bitrate = 6Mbps
-*.**.nic.DSP.phy80211p2.sensitivity = -110 dBm#-89dBm, en base a TrAD
-
-*.**.nic.DSP.phy80211p2.useThermalNoise = true
-*.**.nic.DSP.phy80211p2.thermalNoise = -110dBm
-
-*.**.nic.DSP.phy80211p2.decider = xmldoc("config2.xml")
-*.**.nic.DSP.phy80211p2.analogueModels = xmldoc("config2.xml")
-*.**.nic.DSP.phy80211p2.usePropagationDelay = true
-*.**.nic.DSP.phy80211p2.collectCollisionStatistics = true
-
-*.**.nic.DSP.phy80211p2.antenna = xmldoc("antenna.xml", "/root/Antenna[@id='monopole']")
 
 
 ##########################################################
