agregando otro connection manager para ver si se soluciona el problema de las gates

--- a/src/networks/Xintersection_stgo/omnetpp.ini
+++ b/src/networks/Xintersection_stgo/omnetpp.ini
@@ -76,11 +76,11 @@ sim-time-limit = 1000s
 #                    NIC-Settings                        #
 ##########################################################
 
-*.connectionManager.sendDirect = true
+*.connectionManager.sendDirect = true #set in true originaly
 *.connectionManager.maxInterfDist = 2600m
 *.connectionManager.drawMaxIntfDist = false
 
-*.**.nic[*].mac1609_4.useServiceChannel = false
+*.**.nic[*].mac1609_4.useServiceChannel = true
 
 *.**.nic[*].mac1609_4.txPower = 300 mW #20mW, en base a TrAD
 *.**.nic[*].mac1609_4.bitrate = 6Mbps
@@ -89,8 +89,15 @@ sim-time-limit = 1000s
 *.**.nic[*].phy80211p.useThermalNoise = true
 *.**.nic[*].phy80211p.thermalNoise = -110dBm
 
-*.**.nic[*].phy80211p.decider = xmldoc("config2.xml")
-*.**.nic[*].phy80211p.analogueModels = xmldoc("config2.xml")
+*.**.nic[0].phy80211p.decider = xmldoc("config2.xml")
+*.**.nic[0].phy80211p.analogueModels = xmldoc("config2.xml")
+*.**.nic[0].conectionManagerName = "conectionManager0"
+
+
+*.**.nic[1].phy80211p.decider = xmldoc("config.xml")
+*.**.nic[1].phy80211p.analogueModels = xmldoc("config.xml")
+*.**.nic[1].conectionManagerName = "conectionManager1"
+
 *.**.nic[*].phy80211p.usePropagationDelay = true
 *.**.nic[*].phy80211p.collectCollisionStatistics = true
 
@@ -421,7 +428,7 @@ sim-time-limit = 100s
 *.manager.roiRects = "1213.4,524.2-1413.4,724.2"
 
 *.**.nic.mac1609_4.useServiceChannel = true
-*.node[*].appl.dataOnSch = false
+*.node[*].appl.dataOnSch = true
 
 *.node[*].appl.Send_Per_WSM= false
 *.node[*].appl.sendWSA = ${false,true}
