code is running with 2 nics but has problem in obstacle shadowing

--- a/src/networks/Xintersection_stgo/omnetpp.ini
+++ b/src/networks/Xintersection_stgo/omnetpp.ini
@@ -92,11 +92,17 @@ sim-time-limit = 1000s
 *.**.nic[0].phy80211p.decider = xmldoc("config2.xml")
 *.**.nic[0].phy80211p.analogueModels = xmldoc("config2.xml")
 *.**.nic[0].conectionManagerName = "conectionManager0"
+*.connectionManager1.sendDirect = true #set in true originaly
+*.connectionManager1.maxInterfDist = 2600m
+*.connectionManager1.drawMaxIntfDist = false
 
 
 *.**.nic[1].phy80211p.decider = xmldoc("config.xml")
 *.**.nic[1].phy80211p.analogueModels = xmldoc("config.xml")
 *.**.nic[1].conectionManagerName = "conectionManager1"
+*.connectionManager2.sendDirect = true #set in true originaly
+*.connectionManager2.maxInterfDist = 2600m
+*.connectionManager2.drawMaxIntfDist = false
 
 *.**.nic[*].phy80211p.usePropagationDelay = true
 *.**.nic[*].phy80211p.collectCollisionStatistics = true
