agregando configuración para DSP

--- a/src/networks/Xintersection_stgo/omnetpp.ini
+++ b/src/networks/Xintersection_stgo/omnetpp.ini
@@ -214,9 +214,9 @@ sim-time-limit = 1000s
 *.node[*].appl.sendWSA = false#${false,true}
 
 *.node[*].veinsmobility.accidentCount = 1
-*.node[63].veinsmobility.accidentStart = 301s
+*.node[63].veinsmobility.accidentStart = 305s
 *.node[63].veinsmobility.accidentDuration = 5s
-*.node[63].appl.Accident_start = 301
+*.node[63].appl.Accident_start = 305
 *.node[63].appl.MeInAcc = true
 
 sim-time-limit = 310s
@@ -387,9 +387,9 @@ repeat = 20
 *.node[*].appl.sendWSA = false#${false,true}
 
 *.node[*].veinsmobility.accidentCount = 1
-*.node[10].veinsmobility.accidentStart = 91s
+*.node[10].veinsmobility.accidentStart = 95s
 *.node[10].veinsmobility.accidentDuration = 5s
-*.node[10].appl.Accident_start = 91
+*.node[10].appl.Accident_start = 95
 *.node[10].appl.MeInAcc = true
 
 sim-time-limit = 100s
@@ -418,7 +418,7 @@ sim-time-limit = 100s
 
 [Config WithChSw-TrAD-WSM-p3]
 
-**.vector-recording = false
+**.vector-recording = true
 
 *.node[*].appl.TrAD = true
 *.node[*].appl.TrAD_ti = 0.005
@@ -442,11 +442,41 @@ sim-time-limit = 100s
 
 
 *.node[10].veinsmobility.accidentCount = 1
-*.node[10].veinsmobility.accidentStart = 91s
+*.node[10].veinsmobility.accidentStart = 95s
 *.node[10].veinsmobility.accidentDuration = 5s
-*.node[10].appl.Accident_start = 91
+*.node[10].appl.Accident_start = 95
 *.node[10].appl.MeInAcc = true
 
 sim-time-limit = 100s
 
 #repeat = 20
+
+[Config WithChSw-TrAD-WSM-p3]
+
+**.vector-recording = true
+
+*.node[*].appl.DSP = true
+*.node[*].appl.Theta = 0.005
+*.node[*].appl.DeltaDSP = 0.005s
+
+*.node[*].appl.beaconInterval = 0.5s #${0.1s,0.5s}
+#*.node[*].appl.beaconAtTime = 5s
+
+*.manager.firstStepAt = 90s
+*.manager.roiRects = "1213.4,524.2-1413.4,724.2"
+
+*.**.nic.mac1609_4.useServiceChannel = true
+*.node[*].appl.dataOnSch = true
+
+*.node[*].appl.Send_Per_WSM= false
+*.node[*].appl.sendWSA = ${false,true}
+
+
+
+*.node[10].veinsmobility.accidentCount = 1
+*.node[10].veinsmobility.accidentStart = 95s
+*.node[10].veinsmobility.accidentDuration = 5s
+*.node[10].appl.Accident_start = 95
+*.node[10].appl.MeInAcc = true
+
+sim-time-limit = 100s
