configuracion densidad alta con error

--- a/src/networks/Xintersection_stgo/omnetpp.ini
+++ b/src/networks/Xintersection_stgo/omnetpp.ini
@@ -193,7 +193,7 @@ sim-time-limit = 1000s
 *.node[*].appl.Accident_start = 700
 
 [Config WithChSw-slotted-WSM_Ns5]
-**.vector-recording = false
+**.vector-recording = true #false
 
 *.node[*].appl.Slotted1Enabled = true
 *.node[*].appl.Slotted_Ns = 5
@@ -224,7 +224,7 @@ sim-time-limit = 310s
 #repeat = 20
 
 [Config WithChSw-slotted-WSM_Ns7]
-**.vector-recording = false
+**.vector-recording = true
 
 *.node[*].appl.Slotted1Enabled = true
 *.node[*].appl.Slotted_Ns = 5
@@ -252,7 +252,7 @@ sim-time-limit = 310s
 
 sim-time-limit = 310s
 
-repeat = 20
+#repeat = 20
 
 
 [Config WithChSw-TrAD-WSM]
@@ -290,7 +290,7 @@ repeat = 20
 
 sim-time-limit = 310s
 
-repeat = 20
+#repeat = 20
 
 
 [Config WithChannelSwitching]
@@ -299,7 +299,7 @@ repeat = 20
 *.rsu[*].appl.dataOnSch = true
 
 [Config WithChSw-slotted-WSM_Ns3_p2]
-**.vector-recording = false
+**.vector-recording = true
 
 *.node[*].appl.Slotted1Enabled = true
 *.node[*].appl.Slotted_Ns = 3
@@ -331,7 +331,7 @@ repeat = 20
 
 [Config WithChSw-TrAD-WSM-p2]
 
-**.vector-recording = false
+**.vector-recording = true
 
 *.node[*].appl.TrAD = true
 *.node[*].appl.TrAD_ti = 0.005
@@ -363,7 +363,7 @@ repeat = 20
 
 sim-time-limit = 120s
 
-repeat = 20
+#repeat = 20
 
 [Config WithChSw-slotted-WSM_p3]
 **.vector-recording = true #false
@@ -451,7 +451,7 @@ sim-time-limit = 100s
 
 #repeat = 20
 
-[Config WithChSw-TrAD-WSM-p3]
+[Config WithChSw-DSP-WSM-p3]
 
 **.vector-recording = true
 
