modificando extraccion de ntib desde mac

--- a/src/networks/Xintersection_stgo/omnetpp.ini
+++ b/src/networks/Xintersection_stgo/omnetpp.ini
@@ -373,7 +373,7 @@ sim-time-limit = 120s
 *.node[*].appl.Slotted_R = 300 #40
 *.node[*].appl.Slotted_tau = 0.005 #1.45
 
-*.node[*].appl.beaconInterval = 0.5s #${0.1s,0.5s}
+*.node[*].appl.beaconInterval = 0.1s #${0.1s,0.5s}
 #*.node[*].appl.beaconAtTime = 5s
 
 *.manager.firstStepAt = 90s
@@ -384,7 +384,7 @@ sim-time-limit = 120s
 *.node[*].appl.dataOnSch = true
 
 *.node[*].appl.Send_Per_WSM = false
-*.node[*].appl.sendWSA = false#${false,true}
+*.node[*].appl.sendWSA = true#${false,true}
 
 *.node[*].veinsmobility.accidentCount = 1
 *.node[10].veinsmobility.accidentStart = 95s
