tratando de corregir error en simulación

--- a/src/networks/Xintersection_stgo/omnetpp.ini
+++ b/src/networks/Xintersection_stgo/omnetpp.ini
@@ -76,14 +76,18 @@ sim-time-limit = 1000s
 #                    NIC-Settings                        #
 ##########################################################
 
-*.connectionManager.sendDirect = true #set in true originaly
-*.connectionManager.maxInterfDist = 2600m
-*.connectionManager.drawMaxIntfDist = false
+#*.connectionManager.sendDirect = true #set in true originaly
+#*.connectionManager.maxInterfDist = 2600m
+#*.connectionManager.drawMaxIntfDist = false
 
 *.**.nic[*].mac1609_4.useServiceChannel = true
 
 *.**.nic[*].mac1609_4.txPower = 300 mW #20mW, en base a TrAD
 *.**.nic[*].mac1609_4.bitrate = 6Mbps
+
+#*.**.nic[0].mac1609_4.macNum = 0
+#*.**.nic[1].mac1609_4.macNum = 1
+
 *.**.nic[*].phy80211p.sensitivity = -110 dBm#-89dBm, en base a TrAD
 
 *.**.nic[*].phy80211p.useThermalNoise = true
@@ -380,7 +384,7 @@ sim-time-limit = 120s
 *.manager.roiRects = "1213.4,524.2-1413.4,724.2" #"1217,481-1427,794" #x,y-X,Y "1217.11,1217.11-481.6,481.6 1417,1417-681.6,681.6"
 
 
-*.**.nic.mac1609_4.useServiceChannel = true
+#*.**.nic.mac1609_4.useServiceChannel = true
 *.node[*].appl.dataOnSch = true
 
 *.node[*].appl.Send_Per_WSM = false
@@ -451,7 +455,7 @@ sim-time-limit = 100s
 
 #repeat = 20
 
-[Config WithChSw-DSP-WSM-p3]
+[Config WithChS-DSP-WSM-p3]
 
 **.vector-recording = true
 
