--- a/src/networks/Xintersection_stgo/omnetpp.ini
+++ b/src/networks/Xintersection_stgo/omnetpp.ini
@@ -47,7 +47,6 @@ sim-time-limit = 1000s
 *.manager.port = 9999
 *.manager.autoShutdown = true
 *.manager.launchConfig = xmldoc("stgo1.launchd.xml")
-*.manager.moduleType = "ca_system.nodes.Car"
 #*.manager.roiRects = "20,20-30,30 20,20-30,30"
 
 # Número de Vehiculos
@@ -80,35 +79,21 @@ sim-time-limit = 1000s
 *.connectionManager.maxInterfDist = 2600m
 *.connectionManager.drawMaxIntfDist = false
 
-*.**.nic[*].mac1609_4.useServiceChannel = true
+*.**.nic.mac1609_4.useServiceChannel = false
 
-*.**.nic[*].mac1609_4.txPower = 300 mW #20mW, en base a TrAD
-*.**.nic[*].mac1609_4.bitrate = 6Mbps
-*.**.nic[*].phy80211p.sensitivity = -110 dBm#-89dBm, en base a TrAD
+*.**.nic.mac1609_4.txPower = 300 mW #20mW, en base a TrAD
+*.**.nic.mac1609_4.bitrate = 6Mbps
+*.**.nic.phy80211p.sensitivity = -110 dBm#-89dBm, en base a TrAD
 
-*.**.nic[*].phy80211p.useThermalNoise = true
-*.**.nic[*].phy80211p.thermalNoise = -110dBm
+*.**.nic.phy80211p.useThermalNoise = true
+*.**.nic.phy80211p.thermalNoise = -110dBm
 
-*.**.nic[0].phy80211p.decider = xmldoc("config2.xml")
-*.**.nic[0].phy80211p.analogueModels = xmldoc("config2.xml")
-*.**.nic[0].conectionManagerName = "conectionManager0"
-*.connectionManager1.sendDirect = true #set in true originaly
-*.connectionManager1.maxInterfDist = 2600m
-*.connectionManager1.drawMaxIntfDist = false
+*.**.nic.phy80211p.decider = xmldoc("config.xml")
+*.**.nic.phy80211p.analogueModels = xmldoc("config.xml")
+*.**.nic.phy80211p.usePropagationDelay = true
+*.**.nic.phy80211p.collectCollisionStatistics = true
 
-
-*.**.nic[1].phy80211p.decider = xmldoc("config.xml")
-*.**.nic[1].phy80211p.analogueModels = xmldoc("config.xml")
-*.**.nic[1].conectionManagerName = "conectionManager1"
-*.connectionManager2.sendDirect = true #set in true originaly
-*.connectionManager2.maxInterfDist = 2600m
-*.connectionManager2.drawMaxIntfDist = false
-
-*.**.nic[*].phy80211p.usePropagationDelay = true
-*.**.nic[*].phy80211p.collectCollisionStatistics = true
-
-*.**.nic[*].phy80211p.antenna = xmldoc("antenna.xml", "/root/Antenna[@id='monopole']")
-
+*.**.nic.phy80211p.antenna = xmldoc("antenna.xml", "/root/Antenna[@id='monopole']")
 
 ##########################################################
 #                    WaveAppLayer                        #
@@ -207,7 +192,7 @@ sim-time-limit = 1000s
 *.manager.roiRects = "1213.4,524.2-1413.4,724.2" #"1217,481-1427,794" #x,y-X,Y "1217.11,1217.11-481.6,481.6 1417,1417-681.6,681.6"
 
 
-*.**.nic[*].mac1609_4.useServiceChannel = true
+*.**.nic.mac1609_4.useServiceChannel = true
 *.node[*].appl.dataOnSch = true
 
 *.node[*].appl.Send_Per_WSM = false
@@ -238,7 +223,7 @@ sim-time-limit = 310s
 *.manager.roiRects = "1213.4,524.2-1413.4,724.2" #"1217,481-1427,794" #x,y-X,Y "1217.11,1217.11-481.6,481.6 1417,1417-681.6,681.6"
 
 
-*.**.nic[*].mac1609_4.useServiceChannel = true
+*.**.nic.mac1609_4.useServiceChannel = true
 *.node[*].appl.dataOnSch = true
 
 *.node[*].appl.Send_Per_WSM = ${false,true}
@@ -394,27 +379,7 @@ sim-time-limit = 120s
 
 sim-time-limit = 100s
 
-#repeat = 20
-
-#*.connectionManager.sendDirect = true
-#*.connectionManager.maxInterfDist = 2600m
-#*.connectionManager.drawMaxIntfDist = false
-#
-#*.**.nic[*].mac1609_4.useServiceChannel = false
-#
-#*.**.nic[*].mac1609_4.txPower = 300 mW #20mW, en base a TrAD
-#*.**.nic[*].mac1609_4.bitrate = 6Mbps
-#*.**.nic[*].phy80211p.sensitivity = -110 dBm#-89dBm, en base a TrAD
-#
-#*.**.nic[*].phy80211p.useThermalNoise = true
-#*.**.nic[*].phy80211p.thermalNoise = -110dBm
-#
-#*.**.nic[*].phy80211p.decider = xmldoc("config.xml")
-#*.**.nic[*].phy80211p.analogueModels = xmldoc("config.xml")
-#*.**.nic[*].phy80211p.usePropagationDelay = true
-#*.**.nic[*].phy80211p.collectCollisionStatistics = true
-#
-#*.**.nic[*].phy80211p.antenna = xmldoc("antenna.xml", "/root/Antenna[@id='monopole']")
+repeat = 20
 
 [Config WithChSw-TrAD-WSM-p3]
 
@@ -449,34 +414,4 @@ sim-time-limit = 100s
 
 sim-time-limit = 100s
 
-#repeat = 20
-
-[Config WithChSw-DSP-WSM-p3]
-
-**.vector-recording = true
-
-*.node[*].appl.DSP = true
-*.node[*].appl.Theta = 0.005
-*.node[*].appl.DeltaDSP = 0.005s
-
-*.node[*].appl.beaconInterval = 0.5s #${0.1s,0.5s}
-#*.node[*].appl.beaconAtTime = 5s
-
-*.manager.firstStepAt = 90s
-*.manager.roiRects = "1213.4,524.2-1413.4,724.2"
-
-*.**.nic.mac1609_4.useServiceChannel = true
-*.node[*].appl.dataOnSch = true
-
-*.node[*].appl.Send_Per_WSM= false
-*.node[*].appl.sendWSA = ${false,true}
-
-
-
-*.node[10].veinsmobility.accidentCount = 1
-*.node[10].veinsmobility.accidentStart = 95s
-*.node[10].veinsmobility.accidentDuration = 5s
-*.node[10].appl.Accident_start = 95
-*.node[10].appl.MeInAcc = true
-
-sim-time-limit = 100s
+repeat = 20
