errores en ejecución, se ejecuta WSM periódico

--- a/src/networks/Xintersection_stgo/omnetpp.ini
+++ b/src/networks/Xintersection_stgo/omnetpp.ini
@@ -353,6 +353,7 @@ sim-time-limit = 120s
 [Config WithChSw-slotted-WSM_p3]
 **.vector-recording = true #false
 
+#*.node[*].appl.appName = "myWaveAppLayer"
 *.node[*].appl.Slotted1Enabled = true
 *.node[*].appl.Slotted_Ns = 3 #${3 ,2} 
 *.node[*].appl.Slotted_R = 300 #40
@@ -379,7 +380,7 @@ sim-time-limit = 120s
 
 sim-time-limit = 100s
 
-repeat = 20
+#repeat = 20
 
 [Config WithChSw-TrAD-WSM-p3]
 
