incluyendo comentario para documentar el buen funcionamiento

--- a/src/networks/Xintersection_stgo/omnetpp.ini
+++ b/src/networks/Xintersection_stgo/omnetpp.ini
@@ -367,7 +367,7 @@ sim-time-limit = 120s
 
 
 *.**.nic.mac1609_4.useServiceChannel = true
-*.node[*].appl.dataOnSch = false
+*.node[*].appl.dataOnSch = false  # Setear en false para realizar diseminación
 
 *.node[*].appl.Send_Per_WSM = false
 *.node[*].appl.sendWSA = true#${false,true}
