Traspaso de CBR event a BaseAppLayer

--- a/src/networks/Xintersection_stgo/omnetpp.ini
+++ b/src/networks/Xintersection_stgo/omnetpp.ini
@@ -193,7 +193,7 @@ sim-time-limit = 1000s
 
 
 *.**.nic.mac1609_4.useServiceChannel = true
-*.node[*].appl.dataOnSch = true
+*.node[*].appl.dataOnSch = false
 
 *.node[*].appl.Send_Per_WSM = false
 *.node[*].appl.sendWSA = false#${false,true}
@@ -216,7 +216,7 @@ sim-time-limit = 310s
 *.node[*].appl.Slotted_R = 366 #500 #40 !!debe ser el mismo que *.node[*].appl.TrAD_R = 366 considerando la potencia *.**.nic.mac1609_4.txPower = 20mW estudiando las referencia de Pablo
 *.node[*].appl.Slotted_tau = 0.005 #1.45
 
-*.node[*].appl.beaconInterval = ${0.1s,0.5s}
+*.node[*].appl.beaconInterval = 0.1s#${0.1s,0.5s}
 #*.node[*].appl.beaconAtTime = 5s
 
 *.manager.firstStepAt = 300s
@@ -224,10 +224,10 @@ sim-time-limit = 310s
 
 
 *.**.nic.mac1609_4.useServiceChannel = true
-*.node[*].appl.dataOnSch = true
+*.node[*].appl.dataOnSch = false
 
-*.node[*].appl.Send_Per_WSM = ${false,true}
-*.node[*].appl.sendWSA = false
+*.node[*].appl.Send_Per_WSM = false #${false,true}
+*.node[*].appl.sendWSA = true
 
 *.node[*].veinsmobility.accidentCount = 1
 *.node[63].veinsmobility.accidentStart = 305s
