Neural Network is working

--- a/src/networks/Xintersection_stgo/omnetpp.ini
+++ b/src/networks/Xintersection_stgo/omnetpp.ini
@@ -216,7 +216,7 @@ sim-time-limit = 310s
 *.node[*].appl.Slotted_R = 366 #500 #40 !!debe ser el mismo que *.node[*].appl.TrAD_R = 366 considerando la potencia *.**.nic.mac1609_4.txPower = 20mW estudiando las referencia de Pablo
 *.node[*].appl.Slotted_tau = 0.005 #1.45
 
-*.node[*].appl.beaconInterval = 0.1s#${0.1s,0.5s}
+*.node[*].appl.beaconInterval = ${NTL=0.5s,0.1s,0.1s}#0.1s#${0.1s,0.5s}
 #*.node[*].appl.beaconAtTime = 5s
 
 *.manager.firstStepAt = 300s
@@ -227,17 +227,17 @@ sim-time-limit = 310s
 *.node[*].appl.dataOnSch = false
 
 *.node[*].appl.Send_Per_WSM = false #${false,true}
-*.node[*].appl.sendWSA = true
+*.node[*].appl.sendWSA =${false,false,true !NTL}
 
-*.node[*].veinsmobility.accidentCount = 1
-*.node[63].veinsmobility.accidentStart = 305s
+*.node[*].veinsmobility.accidentCount = 0
+*.node[63].veinsmobility.accidentStart = 320s #305s
 *.node[63].veinsmobility.accidentDuration = 5s
-*.node[63].appl.Accident_start = 305
-*.node[63].appl.MeInAcc = true
+*.node[63].appl.Accident_start = 320 #305
+*.node[63].appl.MeInAcc = false
 
 sim-time-limit = 310s
 
-#repeat = 20
+repeat = 10
 
 
 [Config WithChSw-TrAD-WSM]
@@ -359,7 +359,7 @@ sim-time-limit = 120s
 *.node[*].appl.Slotted_R = 300 #40
 *.node[*].appl.Slotted_tau = 0.005 #1.45
 
-*.node[*].appl.beaconInterval = 0.1s #${0.1s,0.5s}
+*.node[*].appl.beaconInterval = ${NTL=0.5s,0.1s,0.1s} #0.1s#${0.1s,0.5s}
 #*.node[*].appl.beaconAtTime = 5s
 
 *.manager.firstStepAt = 90s
@@ -370,17 +370,17 @@ sim-time-limit = 120s
 *.node[*].appl.dataOnSch = false  # Setear en false para realizar diseminación
 
 *.node[*].appl.Send_Per_WSM = false
-*.node[*].appl.sendWSA = true#${false,true}
+*.node[*].appl.sendWSA = ${false,false,true !NTL} #true #${false,true}
 
-*.node[*].veinsmobility.accidentCount = 1
-*.node[10].veinsmobility.accidentStart = 95s
+*.node[*].veinsmobility.accidentCount = 0 #1
+*.node[10].veinsmobility.accidentStart = 120s #95s
 *.node[10].veinsmobility.accidentDuration = 5s
-*.node[10].appl.Accident_start = 95
+*.node[10].appl.Accident_start = 120 #95
 *.node[10].appl.MeInAcc = true
 
 sim-time-limit = 100s
 
-#repeat = 20
+repeat = 10
 
 [Config WithChSw-TrAD-WSM-p3]
 
