escribiendo server para cargar modelos de h2o

--- a/src/networks/Xintersection_stgo/omnetpp.ini
+++ b/src/networks/Xintersection_stgo/omnetpp.ini
@@ -352,6 +352,7 @@ sim-time-limit = 120s
 
 [Config WithChSw-slotted-WSM_p3]
 **.vector-recording = true #false
+cmdenv-express-mode = true
 
 #*.node[*].appl.appName = "myWaveAppLayer"
 *.node[*].appl.Slotted1Enabled = true
