--- a/src/networks/Xintersection_stgo/omnetpp.ini
+++ b/src/networks/Xintersection_stgo/omnetpp.ini
@@ -212,7 +212,7 @@ sim-time-limit = 1000s
 
 
 *.**.nic[*].mac1609_4.useServiceChannel = true
-*.node[*].appl.dataOnSch = true
+*.node[*].appl.dataOnSch = false
 
 *.node[*].appl.Send_Per_WSM = false
 *.node[*].appl.sendWSA = false#${false,true}
@@ -235,7 +235,7 @@ sim-time-limit = 310s
 *.node[*].appl.Slotted_R = 366 #500 #40 !!debe ser el mismo que *.node[*].appl.TrAD_R = 366 considerando la potencia *.**.nic.mac1609_4.txPower = 20mW estudiando las referencia de Pablo
 *.node[*].appl.Slotted_tau = 0.005 #1.45
 
-*.node[*].appl.beaconInterval = ${0.1s,0.5s}
+*.node[*].appl.beaconInterval = ${NTL=0.5s,0.1s,0.1s}#0.1s#${0.1s,0.5s}
 #*.node[*].appl.beaconAtTime = 5s
 
 *.manager.firstStepAt = 300s
@@ -243,10 +243,10 @@ sim-time-limit = 310s
 
 
 *.**.nic[*].mac1609_4.useServiceChannel = true
-*.node[*].appl.dataOnSch = true
+*.node[*].appl.dataOnSch = false
 
-*.node[*].appl.Send_Per_WSM = ${false,true}
-*.node[*].appl.sendWSA = false
+*.node[*].appl.Send_Per_WSM = false #${false,true}
+*.node[*].appl.sendWSA =${false,false,true !NTL}
 
 *.node[*].veinsmobility.accidentCount = 1
 *.node[63].veinsmobility.accidentStart = 305s
@@ -371,13 +371,14 @@ sim-time-limit = 120s
 
 [Config WithChSw-slotted-WSM_p3]
 **.vector-recording = true #false
+cmdenv-express-mode = true
 
 *.node[*].appl.Slotted1Enabled = true
 *.node[*].appl.Slotted_Ns = 3 #${3 ,2} 
 *.node[*].appl.Slotted_R = 300 #40
 *.node[*].appl.Slotted_tau = 0.005 #1.45
 
-*.node[*].appl.beaconInterval = 0.1s #${0.1s,0.5s}
+*.node[*].appl.beaconInterval = ${NTL=0.5s,0.1s,0.1s} #0.1s#${0.1s,0.5s}
 #*.node[*].appl.beaconAtTime = 5s
 
 *.manager.firstStepAt = 90s
@@ -385,7 +386,7 @@ sim-time-limit = 120s
 
 
 #*.**.nic.mac1609_4.useServiceChannel = true
-*.node[*].appl.dataOnSch = true
+*.node[*].appl.dataOnSch = false  # Setear en false para realizar diseminación
 
 *.node[*].appl.Send_Per_WSM = false
 *.node[*].appl.sendWSA = true#${false,true}
