incluyendo métrica para dedesempeño calsificador

--- a/src/networks/Xintersection_stgo/omnetpp.ini
+++ b/src/networks/Xintersection_stgo/omnetpp.ini
@@ -209,7 +209,8 @@ sim-time-limit = 310s
 #repeat = 20
 
 [Config WithChSw-slotted-WSM_Ns7]
-**.vector-recording = true
+**.vector-recording = false
+cmdenv-express-mode = false
 
 *.node[*].appl.Slotted1Enabled = true
 *.node[*].appl.Slotted_Ns = 5
@@ -218,6 +219,10 @@ sim-time-limit = 310s
 
 *.node[*].appl.beaconInterval = ${NTL=0.5s,0.1s,0.1s}#0.1s#${0.1s,0.5s}
 #*.node[*].appl.beaconAtTime = 5s
+
+*.node[*].appl.NTL_target = ${0,1,2 !NTL}
+*.node[*].appl.aware = true 
+
 
 *.manager.firstStepAt = 300s
 *.manager.roiRects = "1213.4,524.2-1413.4,724.2" #"1217,481-1427,794" #x,y-X,Y "1217.11,1217.11-481.6,481.6 1417,1417-681.6,681.6"
@@ -229,15 +234,15 @@ sim-time-limit = 310s
 *.node[*].appl.Send_Per_WSM = false #${false,true}
 *.node[*].appl.sendWSA =${false,false,true !NTL}
 
-*.node[*].veinsmobility.accidentCount = 0
-*.node[63].veinsmobility.accidentStart = 320s #305s
-*.node[63].veinsmobility.accidentDuration = 5s
-*.node[63].appl.Accident_start = 320 #305
-*.node[63].appl.MeInAcc = false
+*.node[*].veinsmobility.accidentCount = 1
+*.node[63].veinsmobility.accidentStart = 305s #320s #305s
+*.node[63].veinsmobility.accidentDuration = 5s #5s
+*.node[63].appl.Accident_start = 305# 320 #305
+*.node[63].appl.MeInAcc = true
 
 sim-time-limit = 310s
 
-repeat = 10
+repeat = 20
 
 
 [Config WithChSw-TrAD-WSM]
@@ -351,8 +356,8 @@ sim-time-limit = 120s
 #repeat = 20
 
 [Config WithChSw-slotted-WSM_p3]
-**.vector-recording = true #false
-cmdenv-express-mode = true
+**.vector-recording = false
+cmdenv-express-mode = false
 
 #*.node[*].appl.appName = "myWaveAppLayer"
 *.node[*].appl.Slotted1Enabled = true
@@ -361,6 +366,10 @@ cmdenv-express-mode = true
 *.node[*].appl.Slotted_tau = 0.005 #1.45
 
 *.node[*].appl.beaconInterval = ${NTL=0.5s,0.1s,0.1s} #0.1s#${0.1s,0.5s}
+
+*.node[*].appl.NTL_target = ${0,1,2 !NTL}
+*.node[*].appl.aware = true 
+
 #*.node[*].appl.beaconAtTime = 5s
 
 *.manager.firstStepAt = 90s
@@ -373,15 +382,15 @@ cmdenv-express-mode = true
 *.node[*].appl.Send_Per_WSM = false
 *.node[*].appl.sendWSA = ${false,false,true !NTL} #true #${false,true}
 
-*.node[*].veinsmobility.accidentCount = 0 #1
-*.node[10].veinsmobility.accidentStart = 120s #95s
+*.node[*].veinsmobility.accidentCount = 1 #0 #1
+*.node[10].veinsmobility.accidentStart =  95s#120s #95s
 *.node[10].veinsmobility.accidentDuration = 5s
-*.node[10].appl.Accident_start = 120 #95
+*.node[10].appl.Accident_start = 95#120 #95
 *.node[10].appl.MeInAcc = true
 
 sim-time-limit = 100s
 
-repeat = 10
+repeat = 20
 
 [Config WithChSw-TrAD-WSM-p3]
 
