--- a/src/networks/Xintersection_stgo/omnetpp.ini
+++ b/src/networks/Xintersection_stgo/omnetpp.ini
@@ -93,17 +93,23 @@ sim-time-limit = 1000s
 *.**.nic[*].phy80211p.useThermalNoise = true
 *.**.nic[*].phy80211p.thermalNoise = -110dBm
 
+#Para radio de Busy tone
+
 *.**.nic[0].phy80211p.decider = xmldoc("config2.xml")
 *.**.nic[0].phy80211p.analogueModels = xmldoc("config2.xml")
 *.**.nic[0].conectionManagerName = "conectionManager0"
+*.**.nic[0].myFreq = 2.86e9
+
 *.connectionManager1.sendDirect = true #set in true originaly
 *.connectionManager1.maxInterfDist = 2600m
 *.connectionManager1.drawMaxIntfDist = false
 
+#Para radio de DSRC normal
 
 *.**.nic[1].phy80211p.decider = xmldoc("config.xml")
 *.**.nic[1].phy80211p.analogueModels = xmldoc("config.xml")
 *.**.nic[1].conectionManagerName = "conectionManager1"
+*.**.nic[1].myFreq = 5.86e9
 *.connectionManager2.sendDirect = true #set in true originaly
 *.connectionManager2.maxInterfDist = 2600m
 *.connectionManager2.drawMaxIntfDist = false
